# sql-identity-oss

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README_ENTERPRISE.md  Readme.md  docker-compose.enterprise.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
01-overview/: index.html
02-installation/: index.html
03-quickstart/: index.html
04-configuration/: index.html
05-cli/: index.html
06-platforms/: index.html
07-pipeline/: index.html
08-schema/: index.html
09-ui/: index.html
10-api/: index.html
11-mcp/: index.html
12-dbt/: index.html
13-scale-testing/: index.html
14-troubleshooting/: index.html
15-ci-cd/: index.html
16-security/: index.html
17-e2e-testing/: index.html
18-architecture/: index.html
19-matching-algorithm/: index.html
20-data-model/: index.html
21-how-it-works/: index.html
22-metrics/: index.html
23-benchmarks/: index.html
24-sizing/: index.html
25-scaling/: index.html
26-production-hardening/: index.html
27-distribution/: index.html
dbt_idr/: README.md  dbt_project.yml
dbt_idr/macros/: idr_utils.sql  label_propagation.sql  setup_tables.sql
deployment/airflow/: idr_dag.py
deployment/gcp/: main.tf
deployment/keycloak/: README.md  idr-realm.json
deployment/snowflake/: tasks.sql
docs/: 01-overview.md  02-installation.md  03-quickstart.md  04-configuration.md  05-cli.md  06-platforms.md  07-pipeline.md  08-schema.md  09-ui.md  10-api.md  11-mcp.md  12-dbt.md  13-scale-testing.md  14-troubleshooting.md  15-ci-cd.md  16-security.md  17-e2e-testing.md  18-architecture.md  19-matching-algorithm.md  20-data-model.md  21-how-it-works.md  22-metrics.md  23-benchmarks.md  24-sizing.md  25-scaling.md  26-production-hardening.md  27-distribution.md  README.md
docs_old/: cluster_sizing.md  index.md  metadata_configuration.md  scale_considerations.md
docs_old/concepts/: architecture.md  data-model.md  matching-algorithm.md
docs_old/deployment/: ci-cd.md  scheduling.md  security.md
docs_old/getting-started/: faq.md  quickstart.md
docs_old/guides/: agentic-integration.md  configuration.md  configuration_sample.yaml  dry-run-mode.md  end-to-end-testing.md  example-customer-unification.md  metrics-monitoring.md  production-bigquery.md  production-databricks.md  production-duckdb.md  production-hardening.md  production-snowflake.md  running-idr.md  troubleshooting.md  user_guide_cli.md  user_guide_dbt.md  user_guide_ui.md
docs_old/performance/: benchmark-7m-detailed.md  (+1 more)
examples/: config_fuzzy.yaml  config_fuzzy_test.yaml  config_mimesis_retail.yaml  config_multiverse.yaml  config_retail.yaml  config_retail_bigquery.yaml  config_retail_duckdb.yaml  config_retail_snowflake.yaml  config_with_profile.yaml
idr_api/: Dockerfile  __init__.py  dependencies.py  main.py  models.py  session_store.py
idr_core/: __init__.py  cli.py  config.py  connection_manager.py  logger_utils.py  profile_builder.py  quickstart.py  runner.py  schema_defs.py  schema_manager.py
idr_enterprise/: __init__.py  session_store.py
idr_mcp/: README.md  SPEC.yaml  __init__.py  server.py
idr_ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
search/: search_index.json
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_cli_smoke.py  test_config.py  test_connection_manager.py  test_core.py  test_new_runner.py  test_output_stage.py  test_profile_builder.py  test_session_store.py  test_stages.py
tools/: build_deploy.py  create_test_db.py  fix_bq_schema.py  generate_config.py  load_metadata.py  metrics_exporter.py  verify_duckdb.py
(+108 files in other folders)
